--- a/PDI-Explorer/.classpath
+++ b/PDI-Explorer/.classpath
@@ -8,17 +8,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/jfreechart-1.0.19-experimental.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/jfreechart-1.0.19-swt.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/jfreesvg-2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/orsoncharts-1.4-eval-nofx.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/orsonpdf-1.6-eval.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/servlet.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/git/PDI-A5/PDI-Explorer/libs/swtgraphics2d.jar"/>
+	<classpathentry kind="lib" path="libs/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="libs/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
