--- a/PDI-Explorer/.classpath
+++ b/PDI-Explorer/.classpath
@@ -8,8 +8,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="libs/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/junit-4.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
