--- a/PDI-Explorer/.classpath
+++ b/PDI-Explorer/.classpath
@@ -7,6 +7,46 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.base.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.controls.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.fxml.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.graphics.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.media.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.swing.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.web.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx-swt.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="libs/hamcrest-core-1.3.jar"/>
@@ -14,13 +54,5 @@
 	<classpathentry kind="lib" path="libs/jakarta.xml.bind-api.jar"/>
 	<classpathentry kind="lib" path="libs/jaxb-core.jar"/>
 	<classpathentry kind="lib" path="libs/jaxb-impl.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="libs/javafx-sdk-16/lib/javafx-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
